Final Code Push

--- a/force-app/main/default/lwc/customerDashboard/customerDashboard.html
+++ b/force-app/main/default/lwc/customerDashboard/customerDashboard.html
@@ -15,7 +15,7 @@
                 <lightning-icon icon-name="standard:campaign_members" size="medium" class="stat-icon"></lightning-icon>
                 <h2 class="stat-title">Bookings</h2>
                 <p class="stat-value gold">{stats.TotalBookings}</p>
-                <p class="stat-sub">Active: {stats.ActiveBookings} | Completed: {stats.CompletedBookings} | Cancelled: {stats.CancelledOrders}</p>
+                <p class="stat-sub">Active: {stats.ActiveBookings} | Completed: {stats.CompletedBookings} | Cancelled: {stats.CancelledBookings}</p>
             </div>
 
             <!-- Service Requests -->
